[profile.release]
debug = 1

[workspace]
members = [
  "./refs/core-rs/modules/base",
  "./refs/core-rs/modules/migration",
  "./refs/core-rs/modules/omnikit",
  "./refs/core-rs/modules/rocketpack",
  "./refs/core-rs/modules/testkit",

  "./entrypoints/daemon",
  "./modules/engine",
]
exclude = ["refs/core-rs"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Lyrise <lyrise1984@gmail.com>"]
version = "0.1.0"

[workspace.dependencies]
omnius-axus-engine = { path = "./modules/engine" }

omnius-core-base = { path = "./refs/core-rs/modules/base" }
omnius-core-migration = { path = "./refs/core-rs/modules/migration", features = [
  "sqlite",
] }
omnius-core-omnikit = { path = "./refs/core-rs/modules/omnikit" }
omnius-core-rocketpack = { path = "./refs/core-rs/modules/rocketpack" }
omnius-core-testkit = { path = "./refs/core-rs/modules/testkit" }

rand = { version = "0.10.1", features = ["chacha"] }
rand_core = "0.10.1"
reqwest = "0.13.4"
async-trait = "0.1.89"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
testcontainers = "0.27.3"
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = "0.1.18"
tokio-postgres = { version = "0.7.17", features = ["with-chrono-0_4"] }
tracing = { version = "0.1.44", features = ["valuable"] }
tracing-subscriber = { version = "0.3.23", features = [
  "fmt",
  "json",
  "valuable",
  "env-filter",
] }
valuable = { version = "0.1.1", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = [
  "sqlite",
  "chrono",
  "derive",
  "runtime-tokio",
] }
hex = "0.4.3"
thiserror = "2.0.18"
once_cell = "1.21.4"
base64 = "0.22.1"
futures = "0.3.32"
futures-util = "0.3.32"
serial_test = "3.4.0"
rupnp = "3.0.0"
pin-utils = "0.1.0"
local-ip-address = "0.6.13"
nom = "8.0.0"
fast-socks5 = "1.0.0"
rocksdb = { version = "0.24.0", default-features = false }
sha3 = "0.12.0"
tempfile = "3.27.0"
crc = "3.4.0"
testresult = "0.4.1"
hkdf = "0.13.0"
aes-gcm = "0.10.3"
parking_lot = "0.12.5"
x25519-dalek = { version = "=3.0.0-rc.0", features = ["static_secrets"] }
ed25519-dalek = { version = "=3.0.0-rc.0", features = [
  "alloc",
  "rand_core",
  "pkcs8",
] }
clap = { version = "4.6.1", features = ["derive"] }
toml = "1.0.6"
strum = { version = "0.28.0", features = ["derive"] }
enumflags2 = "0.7.12"

axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.12", features = [
  "cookie",
  "query",
  "typed-header",
] }
bytes = "1"
headers = "0.4"
http = "1"

[workspace.lints.clippy]
uninlined_format_args = "allow"
