[package]
name = "omnius-axus-daemon"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
build = "build.rs"

[dependencies]
omnius-axus-interface = { path = "../interface" }
omnius-axus-engine = { workspace = true }

omnius-core-base = { workspace = true }
omnius-core-rocketpack = { workspace = true }
omnius-core-omnikit = { workspace = true }

serde = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
valuable = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }

[dev-dependencies]
testresult = { workspace = true }
