[package]
name = "omnius-axus-engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
omnius-core-base = { workspace = true }
omnius-core-migration = { workspace = true }
omnius-core-omnikit = { workspace = true }
omnius-core-rocketpack = { workspace = true }

rand = { workspace = true }
rand_core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
rupnp = { workspace = true }
pin-utils = { workspace = true }
local-ip-address = { workspace = true }
nom = { workspace = true }
fast-socks5 = { workspace = true }
rocksdb = { workspace = true }
ed25519-dalek = { workspace = true }
reqwest = { workspace = true }
crc = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
strum = { workspace = true }
enumflags2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
testresult = { workspace = true }
tracing-subscriber = { workspace = true }
